# rustadventure

./: Cargo.toml  README.md  rust-toolchain.toml
cheat/: Cargo.toml
cheat/src/: lib.rs
cheat/src/adventure/: mod.rs  structs.rs
cheat/src/hooks/: client_world_tick.rs  game_api_tick.rs  mod.rs  player_can_jump.rs  player_tick.rs  ws_send.rs
cheat/src/keyboard/: mod.rs
cheat/src/memory/: findpattern.rs  module.rs  process.rs  snapshot.rs
injector/: Cargo.toml
injector/src/: main.rs
