[package]
name = "rustadventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
device_query = "1.1.2"
retour = "0.1"
lazy_static = "1.4.0"
regex = "1.7.1"
widestring = "1.0.2"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.16"
log = "0.4.17"
panic-message = "0.3.0"
byteorder = "1.4.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "tlhelp32",
    "processthreadsapi",
    "wow64apiset",
    "utilapiset",
    "libloaderapi"
]}
